<resources>
    <string name="app_name">Loki Group Manager</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <!-- Navigation View -->
    <string name="nav_header_title">Loki Group Manager</string>
    <string name="nav_header_subtitle">Welcome !</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="nav_users">Users</string>
    <string name="nav_groups">Groups</string>
    <string name="nav_schedule">Schedule</string>
    <string name="nav_reminder">Reminder</string>
    <string name="nav_title_options">Options</string>
    <string name="nav_settings">Settings</string>
    <string name="nav_info">About us</string>

    <string name="action_settings">Settings</string>

    <!-- About us Activity -->
    <string name="title_activity_about_us">About Us</string>
    <string name="about_us_title">We are two students from DUT Informatique</string>

    <!-- Settings Activity -->
    <string name="title_activity_settings">Settings</string>
    <string name="settings_title">Change the differents settings</string>
    <string name="title_activity_users">Users</string>
    <string name="users_title">Users list</string>
    <string name="groups_title">Groups list</string>
    <string name="title_activity_groups">Groups</string>
    <string name="title_activity_schedule">Schedule</string>
    <string name="schedule_title">Schedule</string>
    <string name="reminder_title">Reminder list</string>
    <string name="title_activity_reminder">Reminder</string>
    <!--<string name="title_activity_login">Sign in</string>-->

    <!-- Users Activity -->
    <string name="firstname">First name</string>
    <string name="surname">Surname</string>
    <string name="email">Email</string>
    <string name="save">Save</string>
    <string name="user_sort">Users sorted !</string>

    <!-- Group Activity -->
    <string name="groupname">Group name</string>
    <string name="description">Description</string>
    <string name="group_sort">Groups sorted !</string>

    <!-- Actions -->
    <string name="delete">Delete</string>
    <string name="modify_users">Modify members</string>

    <!-- Errors -->
    <string name="emptyfield">Error : Some fields are empty</string>

    <!-- Strings related to login
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password (optional)</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="error_invalid_email">This email address is invalid</string>
    <string name="error_invalid_password">This password is too short</string>
    <string name="error_incorrect_password">This password is incorrect</string>
    <string name="error_field_required">This field is required</string>
    <string name="permission_rationale">"Contacts permissions are needed for providing email
        completions."
    </string>-->
    <string name="group_user">Group</string>
    <string name="eventname">Name:</string>
    <string name="eventplace">Place:</string>
    <string name="eventdate">Date:</string>
    <string name="eventdescription">Description:</string>
    <string name="eventdetails">Details</string>
    <string name="last_users">Last Users:</string>
</resources>
