<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_users"
            android:icon="@drawable/ic_menu_person"
            android:title="@string/nav_users"
            android:onClick="clickeventUsers"/>
        <item
            android:id="@+id/nav_groups"
            android:icon="@drawable/ic_menu_group"
            android:title="@string/nav_groups"
            android:onClick="clickeventGroups"/>
        <item
            android:id="@+id/nav_schedule"
            android:icon="@drawable/ic_menu_date_range"
            android:title="@string/nav_schedule"
            android:onClick="clickeventSchedule"/>
        <item
            android:id="@+id/nav_reminder"
            android:icon="@drawable/ic_menu_notifications"
            android:title="@string/nav_reminder"
            android:onClick="clickeventReminder"/>
    </group>

    <item android:title="@string/nav_title_options">
        <menu>
            <group android:checkableBehavior="single">
                <item
                    android:id="@+id/nav_settings"
                    android:icon="@drawable/ic_menu_settings"
                    android:title="@string/nav_settings"
                    android:onClick="clickeventSettings"/>
                <item
                    android:id="@+id/nav_info"
                    android:icon="@drawable/ic_menu_info"
                    android:title="@string/nav_info"
                    android:onClick="clickeventAboutUs"/>
            </group>
        </menu>
    </item>

</menu>
