<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@drawable/ic_account_circle"
        android:layout_gravity="center_horizontal"
        android:layout_margin="10dp"/>
    <TextView
        android:id="@+id/firstnameViewDialog"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/firstname"
        android:textSize="24sp"
        android:textStyle="bold"
        android:layout_marginLeft="30dp"
        android:layout_marginVertical="10dp"/>
    <TextView
        android:id="@+id/surnameViewDialog"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/surname"
        android:textSize="22sp"
        android:textStyle="bold"
        android:layout_marginLeft="30dp"
        android:layout_marginVertical="10dp"/>
    <TextView
        android:id="@+id/emailViewDialog"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/email"
        android:textSize="18sp"
        android:layout_marginLeft="30dp"
        android:layout_marginVertical="10dp"/>

</LinearLayout>