<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android" android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <TextView
        android:id="@+id/eventDetailsViewDialog"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/eventdetails"
        android:textSize="25sp"
        android:textStyle="bold"
        android:layout_margin="10dp"/>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/eventNameViewDialogTextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/eventname"
            android:textSize="18sp"
            android:layout_margin="5dp"/>

        <TextView
            android:id="@+id/eventNameViewDialog"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/eventname"
            android:textSize="18sp"
            android:textStyle="bold"
            android:layout_margin="5dp"/>

    </LinearLayout>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/eventPlaceViewDialogTextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/eventplace"
            android:textSize="18sp"
            android:layout_margin="5dp"/>

        <TextView
            android:id="@+id/eventPlaceViewDialog"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/eventplace"
            android:textSize="18sp"
            android:layout_margin="5dp"/>

    </LinearLayout>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/eventDateViewDialogTextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/eventdate"
            android:textSize="18sp"
            android:layout_margin="5dp"/>

        <TextView
            android:id="@+id/eventDateViewDialog"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/eventdate"
            android:textSize="18sp"
            android:layout_margin="5dp"/>

    </LinearLayout>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/eventDescriptionViewDialogTextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/eventdescription"
            android:textSize="18sp"
            android:layout_margin="5dp"/>

        <TextView
            android:id="@+id/eventDescriptionViewDialog"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/eventdescription"
            android:textSize="18sp"
            android:layout_margin="5dp"/>

    </LinearLayout>




</LinearLayout>