<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorWhite"
    android:orientation="vertical">

    <android.support.design.widget.AppBarLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <!-- Top toolbar -->
        <android.support.v7.widget.Toolbar
            android:id="@+id/toolbar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <android.support.constraint.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <!-- Close Button -->
                <ImageButton
                    android:id="@+id/add_event_close"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:layout_marginStart="8dp"
                    android:layout_marginLeft="8dp"
                    android:layout_marginTop="8dp"
                    android:layout_marginBottom="8dp"
                    android:background="@android:color/transparent"
                    android:src="@drawable/ic_close_white_24dp"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

                <!-- Save Button -->
                <Button
                    android:id="@+id/add_event_save"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:layout_marginTop="8dp"
                    android:layout_marginEnd="8dp"
                    android:layout_marginRight="10dp"
                    android:layout_marginBottom="8dp"
                    android:background="@android:color/transparent"
                    android:text="@string/save"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

            </android.support.constraint.ConstraintLayout>

        </android.support.v7.widget.Toolbar>

    </android.support.design.widget.AppBarLayout>

    <ScrollView
        android:layout_width="fill_parent"
        android:layout_height="wrap_content">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginLeft="30dp"
            android:layout_marginTop="30dp"
            android:layout_marginRight="30dp"
            android:layout_marginBottom="0dp"
            android:orientation="vertical">

            <!-- Name -->
            <TextView
                style="@style/LightText"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/eventname" />

            <EditText
                android:id="@+id/add_event_nameEvent"
                style="@style/AddUserEditText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="text" />

            <!-- Place -->
            <TextView
                style="@style/LightText"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/eventplace" />

            <EditText
                android:id="@+id/add_event_placeEvent"
                style="@style/AddUserEditText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="text" />

            <!-- Date -->
            <TextView
                style="@style/LightText"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/eventdate" />

            <DatePicker
                android:id="@+id/add_event_dateEvent"
                style="@style/AddUserEditText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />

            <!-- Description -->
            <TextView
                style="@style/LightText"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/eventdescription" />

            <EditText
                android:id="@+id/add_event_descriptionEvent"
                style="@style/AddUserEditText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="text" />


        </LinearLayout>

    </ScrollView>

</LinearLayout>